# CUSolver_CMake_ver1

./: CMakeLists.txt
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp
utils/: helper_cuda(1).h  helper_cusolver(1).h  helper_string(1).h
